@@ -56,10 +56,13 @@
  </bean>
 
  <bean id="FileReader" class="org.openadaptor.auxil.connector.iostream.reader.FileReadConnector">
-  <description>Reader which reads from a pre-canned doxml input file.</description>
+  <description>
+    Read a file containing legacy DOXML (Using DOXMLReader instead of StringReader will allow
+    the file to potentially contain multiple DOXML messages if necessary).
+  </description>
   <property name="filename" value="input/bike_doxml.txt" />
   <property name="dataReader">
-   <bean class="org.openadaptor.auxil.connector.iostream.reader.string.StringReader" />
+   <bean class="org.openadaptor.legacy.connector.iostream.reader.string.DOXMLReader" />
   </property>
  </bean>
 
